# cr3_arm

./: README.md
cr3_bringup/: CMakeLists.txt  package.xml
cr3_custom_description/: CMakeLists.txt  package.xml
cr3_custom_description/launch/: display.launch.py
cr3_custom_description/rviz/: cr3_config.rviz
cr3_custom_description/urdf/mech/: cr3_macro copy.xacro  cr3_macro.xacro  custom_base.urdf.xacro  simple_gripper.urdf.xacro
cr3_custom_description/urdf/robots/: cr3_custom.urdf.xacro  cr3_custom_gazebo.urdf.xacro
cr3_custom_gazebo/: CMakeLists.txt  package.xml
cr3_custom_gazebo/config/: controllers.yaml
cr3_custom_gazebo/launch/: cr3_gazebo.launch.py  gazebo.launch.py
cr3_custom_gazebo/scripts/: infinity_sweep.py
cr3_custom_gazebo/worlds/: empty copy.world  empty.world
cr3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cr3_moveit_config/config/: cr3_custom_gazebo copy.srdf  cr3_custom_gazebo.ros2_control.xacro  cr3_custom_gazebo.srdf  cr3_custom_gazebo.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics copy.yaml  kinematics.yaml  moveit_controllers copy.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_parameters.yaml
cr3_moveit_config/launch/: demo.launch.py  gazebo_moveit.launch copy.py  gazebo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_moveit_servo.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr3_moveit_examples/: CMakeLists.txt  package.xml
cr3_moveit_examples/launch/: box_sorter_moveit.launch.py  first_program.launch.py
cr3_moveit_examples/src/: cr3_box_sorter_moveit copy.cpp  cr3_box_sorter_moveit.cpp  cr3_first_program.cpp
cr3_ros2/: CMakeLists.txt  package.xml
cr3_system_tests/: CMakeLists.txt  package.xml
cr3_teleop/: package.xml  setup.cfg  setup.py
cr3_teleop/scripts/: keyboard_servo_joint_jog.py  keyboard_servo_teleop.py  keyboard_servo_twist_test.py  keyboard_teleop.py  real_robot_bridge.py
