<?xml version="1.0"?>
<package format="3">
  <name>cr3_custom_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo Sim simulation package for the custom CR3 robot.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>gripper_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>python3-numpy</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <depend>cr3_custom_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>